--- a/src/components/Duty/DutyAttach/DutyAttach.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttach.module.css
@@ -135,13 +135,16 @@
 }
 
 .duty_attach_delete.taboo {
-    /*background-color: rgba(114, 24, 24, 0.1);*/
-    text-decoration: line-through;
+    color: #525252;
 }
 
 @media (pointer: fine) {
     .duty_attach_delete:hover {
         background-color: rgba(114, 24, 24, 0.2);
+    }
+    .duty_attach_delete.taboo:hover {
+        background-color: rgba(255, 255, 255, 0);
+        text-decoration: line-through;
     }
 }
 
