--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body, html {
 }
 *::-webkit-scrollbar-track {
     overflow: overlay;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0);
 
 }
 *::-webkit-scrollbar-thumb {
