--- a/src/components/Duty/DutyMaterials.module.css
+++ b/src/components/Duty/DutyMaterials.module.css
@@ -53,7 +53,7 @@
 
 .duty_materials_file_name {
     font-size: 14px;
-    width: 400px;
+    width: 100%;
     margin: auto;
     margin-left: 10px;
     word-break: break-all;
