--- a/src/components/DesktopMenu/Mail/Mail.module.css
+++ b/src/components/DesktopMenu/Mail/Mail.module.css
@@ -1,22 +1,30 @@
 .mail {
-    width: 147px;
+    margin-left: 10px;
     height: 35px;
     background: rgba(33, 33, 33, 0.8);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 21px;
 
     font-size: 14px;
     color: #FFFFFF;
-    /*text-align: center;*/
+
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: all 0.1s ease-in-out;
+}
+
+.icon {
+    margin: auto 2px auto 16px;
+    padding-bottom: 1px;
 }
 
 .text {
-    margin-right: 10px;
+    margin-right: 18px;
     margin-left: 10px;
+    padding-bottom: 1px;
 }
 
 .counter {
@@ -37,6 +45,5 @@
 }
 
 .mail:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    transition: background-color 0.1s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.2);
 }
