--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -18,6 +18,7 @@
     border-style: solid;
     font-family: 'M_Ying_Hei';
     min-width: 320px;
+    max-width: 320px;
     margin-right: 60px;
     height: fit-content;
     text-align: left;
