--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -5,6 +5,7 @@
     border-style: solid;
     font-family: 'M_Ying_Hei';
     min-width: 320px;
+    max-width: 320px;
     margin-left: 60px;
     height: fit-content;
     text-align: left;
