--- a/src/components/DesktopMenu/ScheduleLink/ScheduleLink.module.css
+++ b/src/components/DesktopMenu/ScheduleLink/ScheduleLink.module.css
@@ -30,3 +30,7 @@
 .block:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
+.block:active {
+    background-color: rgba(255, 255, 255, 0.3);
+}
