--- a/src/components/DesktopMenu/Mail/Mail.module.css
+++ b/src/components/DesktopMenu/Mail/Mail.module.css
@@ -47,3 +47,8 @@
 .mail:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
+
+.mail:active {
+    background-color: rgba(255, 255, 255, 0.3);
+}
