--- a/src/components/Space/TaskList/TaskList.module.css
+++ b/src/components/Space/TaskList/TaskList.module.css
@@ -114,7 +114,7 @@
     width: 100%;
     /* margin-left: -0.5px; */
     height: 10px;
-    background-color: #0a0a0a;
+    background-color: #0e0e0e;
 }
 
 .open_materials {
