--- a/src/components/DesktopMenu/Mail/Mail.module.css
+++ b/src/components/DesktopMenu/Mail/Mail.module.css
@@ -38,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial;
+    /* font-family: Arial; */
     font-weight: bold;
     letter-spacing: 0.2px;
     font-size: 13px;
