--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -107,6 +107,8 @@
 @media (max-width: 600px) {
     .deadline_block {
         min-width: 92vw;
+        max-width: 92vw;
+        margin: 0 auto;
     }
     .title {
         margin: 30px 32px 50px;
