--- a/src/components/DesktopMenu/Mail/Mail.module.css
+++ b/src/components/DesktopMenu/Mail/Mail.module.css
@@ -45,10 +45,11 @@
     color: rgba(0, 0, 0, 0.8);
 }
 
+@media (pointer: fine) {
 .mail:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
-
+}
 
 .mail:active {
     background-color: rgba(255, 255, 255, 0.3);
