--- a/src/components/DesktopMenu/ScheduleLink/ScheduleLink.module.css
+++ b/src/components/DesktopMenu/ScheduleLink/ScheduleLink.module.css
@@ -27,8 +27,10 @@
         padding-bottom: 1px;
 }
 
+@media (pointer: fine) {
 .block:hover {
     background-color: rgba(255, 255, 255, 0.2);
+}
 }
 
 .block:active {
