--- a/src/components/Space/CourseList/CourseList.module.css
+++ b/src/components/Space/CourseList/CourseList.module.css
@@ -50,6 +50,23 @@
     user-select: none;
     line-height: 1.9;
     font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    opacity: 0.7;
+}
+
+.course_settings_icon {
+    margin-left: -6px;
+    margin-right: 8px;
+}
+
+.course_settings_hover {
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+    user-select: none;
+    line-height: 1.9;
+    font-size: 16px;
     margin: 0px -15px -3px;
     cursor: pointer;
     text-align: center;
@@ -59,16 +76,17 @@
     border-bottom-left-radius: 23px;
     border-bottom-right-radius: 23px;
     transition: all 0.1s ease-in-out;
-
+    align-items: center;
+    justify-content: center;
 }
 
 @media (pointer: fine) {
-    .course_settings:hover {
+    .course_settings_hover:hover {
         background-color: rgba(255, 255, 255, 0.05);
     }
 }
 
-.course_settings:active {
+.course_settings_hover:active {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -113,14 +131,14 @@
     border-top: 10px solid #010101;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
     .course_block {
         min-width: 560px;
         max-width: 560px;
         margin: 0px auto;
     }
     .course_item {
-        padding: 3px 10px;
+        /* padding: 3px 10px; */
     }
     .course_list {
         margin-bottom: 30px;
