--- a/src/components/Space/DeadlineList/DeadlineList.module.css
+++ b/src/components/Space/DeadlineList/DeadlineList.module.css
@@ -20,7 +20,7 @@
 .title {
     color: white;
     font-size: 28px;
-    margin: 40px 32.5px 50px;
+    margin: 42px 37px 50px;
     text-align: left;
     line-height: 1.4;
     cursor: default;
@@ -35,10 +35,7 @@
     line-height: 1.55;
     font-weight: 400;
     background-position: center center;
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
+    margin: 20px 25px;
     border: 2px solid transparent;
     padding-left: 10px;
     padding-right: 10px;
@@ -87,6 +84,8 @@
     height: 0;
     border: none;
     border-top: 1.5px solid white;
+    opacity: 0.3;
+    border-radius: 50%;
 }
 
 @font-face {
@@ -96,7 +95,7 @@
     font-weight: bold;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
     .deadline_block {
         min-width: 560px;
         max-width: 560px;
@@ -114,4 +113,8 @@
         margin: 30px 32px 50px;
         font-size: 24px;
     }
+    .deadline_item {
+        margin: 20px 20px;
+    }
+        
 }
