--- a/src/components/Space/Space.css
+++ b/src/components/Space/Space.css
@@ -22,9 +22,11 @@
 
 }
 
-@media(max-width: 1000px) {
+@media(max-width: 1300px) {
     .space {
         flex-direction: column;
+        margin: auto;
+        padding: auto;
     }
 }
 
