--- a/src/components/Space/TaskList/TaskList.module.css
+++ b/src/components/Space/TaskList/TaskList.module.css
@@ -56,11 +56,12 @@
 .tasks_not_found {
     color: darkgray;
     text-align: left;
-    margin-top: -20px;
+    margin-top: -10px;
     margin-bottom: 40px;
     margin-left: 40px;
     font-size: 20px;
     cursor: default;
+    font-size: 17px;
 }
 
 .task_name {
@@ -108,6 +109,8 @@
     height: 0;
     border: none;
     border-top: 1.5px solid white;
+    opacity: 0.3;
+    border-radius: 50%;
 }
 
 .materials_breaker {
@@ -163,7 +166,7 @@
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1300px) {
     .block_header {
         display: flex;
         cursor: pointer;
