--- a/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
@@ -52,6 +52,61 @@
     animation: openUp 0.7s cubic-bezier(0.88, 0.02, 0.22, 0.98);
 }
 
+
+.url_block {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: rgba(255, 255, 255, .8);
+}
+.placeholder {
+    font-family: 'M_Ying_Hei';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+
+    margin: 30px auto 10px auto;
+    width: 50%;
+}
+.url_block > input {
+    margin: 10px auto 10px auto;
+    /*width: 45px;*/
+    /*height: 17px;*/
+    /*margin: auto 0px auto 15px;*/
+    width: 50%;
+    height: 22px;
+    background-color: transparent;
+    border: none;
+
+    font-family: 'M_Ying_Hei';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(255, 255, 255, .8);
+}
+.url_block > input:focus {
+    outline: none;
+}
+
+.url_button {
+    font-family: 'M_Ying_Hei';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 10px auto 10px auto;
+    cursor: pointer;
+}
+.url_button:hover {
+    background-color: rgba(255, 255, 255, 0.547);
+}
+
+
+
+
+
 @keyframes openUp {
     0% {
         transform: translateY(150%);
