--- a/src/components/MobileNavigation/MobileNavigation.module.css
+++ b/src/components/MobileNavigation/MobileNavigation.module.css
@@ -81,6 +81,12 @@
 
 }
 
+@media (min-width: 1100px) {
+    .bar {
+        padding-left: 2vw;
+    }
+}
+
 @media (max-width: 600px) {
     .bar {
         padding-left: 5%;
