--- a/src/components/Space/TaskList/TaskList.module.css
+++ b/src/components/Space/TaskList/TaskList.module.css
@@ -16,7 +16,8 @@
     /* border-color: transparent;
     border-style: solid; */
     min-width: 560px;
-    /* min-height: 200px; */
+    max-width: 560px;
+    margin: 0 auto;
     font-family: 'M_Ying_Hei';
     user-select: none;
     -webkit-user-select: none;
