--- a/src/cssAnimation/sch_controller_animation.css
+++ b/src/cssAnimation/sch_controller_animation.css
@@ -1,17 +1,30 @@
 .my-node-enter {
     opacity: 0;
+    transform: scale(0, 0);
 }
 
 .my-node-enter-active {
     opacity: 1;
-    transition: opacity 1000ms;
+    transform: scale(1, 1);
+    transition: all 1s ease-in-out;
+}
+
+.my-node-enter-done {
+    opacity: 1;
+    transform: scale(1, 1);
 }
 
 .my-node-exit {
     opacity: 1;
+    transform: scale(1, 1);
+    transition: all 1s ease-in-out;
 }
 
 .my-node-exit-active {
     opacity: 0;
-    transition: opacity 1000ms;
+    transform: scale(0, 0);
+}
+
+.my-node-exit-done {
+    display: none;
 }
