--- a/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
+++ b/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
@@ -12,6 +12,7 @@
     margin: auto;
     display: flex;
     flex-direction: row;
+    transition: all 0.1s ease-in-out;
 }
 
 .block.date_selector {
@@ -21,11 +22,11 @@
 
 .calendar {
     position: absolute;
-    height: 236px;
+    height: fit-content;
     width: 245px;
     margin-left:  calc(3% - 1px);
     margin-top: calc(120px + 45px - 10px);
-    border: 4px solid black;
+    padding: 4px;
     top: 0;
     bottom: 0;
     left: 0;
@@ -36,9 +37,33 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 1);
+    background: rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 10px 30px 10px rgba(0, 0, 0, 0.65);
+    backdrop-filter: blur(25px);
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    transition: all 0.1s ease-in-out;
+}
+
+.month {
+    width: 120px;
+    text-align: center;
+}
+
+.days {
+    color:rgba(255, 255, 255, 0.3);
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.day {
+    text-align: center;
+    padding: 5px 6px;
+}
+
+.calendar_box {
+    margin-bottom: 15px;
 }
 
 .table {
@@ -55,51 +80,52 @@ tbody {
 
 
 td {
-    /*width: 27px;*/
-    /*height: 24px;*/
-    /*background: rgba(255, 255, 255, 0.15);*/
-    /*border-radius: 4px;*/
     width: 28px;
     height: 28px;
 
     justify-content: center;
     align-items: center;
     margin: auto;
+    text-align: center;
 
     font-weight: bold;
     letter-spacing: 0.2px;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.3);
     flex: none;
     order: 5;
     flex-grow: 0;
+    border-radius: 15%;
 }
 
 td.isOk {
-    border: 1px solid goldenrod;
+    color: rgba(255, 255, 255);
+    cursor: pointer;
 }
 
 td.isNow {
-    border: 1px solid cornflowerblue;
+    background-color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
 }
 
-td:hover {
-    background-color: #464343;
+@media (pointer: fine) {
+td.isOk:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: all 0.1s ease-in-out;
+}
 }
 
 .head {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255);
     display: flex;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .arrow {
     width: 14px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.arrow:hover {
-    border: 1px solid ghostwhite;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .passiveArrow {
@@ -155,7 +181,7 @@ input:focus {
 
 
 
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255);
 }
 
 @font-face {
