--- a/src/cssAnimation/sch_controller_animation.css
+++ b/src/cssAnimation/sch_controller_animation.css
@@ -1,19 +1,17 @@
 .my-node-enter {
+    /*display: none;*/
     opacity: 0;
-    /* transform: scale(0, 0); */
     transform: translateY(-30px);
 }
 
 .my-node-enter-active {
     opacity: 1;
-    /* transform: scale(1, 1); */
     transform: translateY(0px);
     transition: all 0.2s cubic-bezier(0.88, 0.02, 0.22, 0.98);
 }
 
 .my-node-enter-done {
     opacity: 1;
-    /* transform: scale(1, 1); */
     transform: translateY(0px);
 }
 
@@ -32,4 +30,6 @@
 
 .my-node-exit-done {
     display: none;
+    opacity: 0;
+    transform: translateY(-30px);
 }
