--- a/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
+++ b/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
@@ -6,10 +6,11 @@
 .block {
     width: 245px;
     height: 43px;
-
-    background: #1C1C1C;
+    position: absolute;
+    margin-left: 292px;
+    margin-top: -80px;
+    background: #1a1a1a;
     border-radius: 9px;
-    margin: auto;
     display: flex;
     flex-direction: row;
     transition: all 0.1s ease-in-out;
@@ -18,19 +19,21 @@
 .block.date_selector {
     padding-right: 14px;
     z-index: 5;
+
 }
+
 
 .calendar {
     position: absolute;
     height: fit-content;
     width: 245px;
-    margin-left:  calc(3% - 1px);
-    margin-top: calc(120px + 45px - 10px);
+    margin-left:  292px;
+    margin-top: -50px;
     padding: 4px;
-    top: 0;
+    /* top: 0;
     bottom: 0;
     left: 0;
-    right: 0;
+    right: 0; */
 
     z-index: 4;
     display: flex;
@@ -77,6 +80,11 @@ tbody {
     align-items: center;
 }
 
+td.isNow {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: rgba(255, 255, 255);
+    cursor: pointer;
+}
 
 td {
     width: 28px;
@@ -102,11 +110,6 @@ td.isOk {
     cursor: pointer;
 }
 
-td.isNow {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: rgba(255, 255, 255);
-    cursor: pointer;
-}
 
 @media (pointer: fine) {
 td.isOk:hover {
@@ -182,6 +185,73 @@ input:focus {
 
 
     color: rgba(255, 255, 255);
+}
+
+@media (max-width: 600px) {
+    .block {
+        width: 245px;
+        height: 43px;
+        position: absolute;
+        right: 8px;
+        margin-top: -77px;
+        background: #1a1a1a;
+        border-radius: 9px;
+        display: flex;
+        flex-direction: row;
+        transition: all 0.1s ease-in-out;
+    }
+
+    .calendar {
+        margin: 0;
+        right: 8px;
+        margin-top: -44px;
+        align-items: right;
+        justify-content: right;
+    } 
+}
+
+@media (max-width: 500px) {
+    .block {
+        right: 0;
+        width: 100%;
+        height: 43px;
+        position: relative;
+        margin: 0 27px -5px 27px;
+    }
+
+    .calendar {
+        right: 0;
+        left: 0;
+        position: absolute;
+        height: fit-content;
+        width: calc(100% - 54px);
+        margin: 30px auto 0 auto;
+    } 
+
+    .days {
+        color:rgba(255, 255, 255, 0.3);
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    .calendar_box {
+        width: 85%;
+        margin-bottom: 4vw;
+    }
+
+    .head {
+        color: rgba(255, 255, 255);
+        display: flex;
+        margin-top: 30px;
+        margin-bottom: 27px;
+    }
+
+    .calendar_date_pool {
+        border-top: 10px solid transparent;
+    }
+
 }
 
 @font-face {
