--- a/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
+++ b/src/components/Duty/DutyAttach/DutyAttachModal/DutyAttachModal.module.css
@@ -259,9 +259,9 @@
 @media (max-width: 600px) {
     .modal {
         min-width: 100vw;
-        min-height: 400px;
+        min-height: 430px;
+        height: 560px;
         max-width: 100vw;
-        max-height: fit-content;
         width: 100vw;
     }
 
@@ -284,4 +284,56 @@
     .modal_attach_block {
         height: 160px;
     }
+
+    .modal_note {
+        width: 200px;
+        font-size: 12px;
+    }
+
+    .modal_upload_icon {
+        width: 60px;
+        height: 60px;
+    }
+
+    .link_icon {
+        width: 30px;
+        height: 30px;
+        margin-top: 30px;
+        margin-left: 34px;
+    }
+    
+    .link_title_text {
+        margin-left: 15px;
+        margin-top: 33px;
+        margin-bottom: 20px;
+        color: white;
+        font-size: 16px;
+    }
+
+    .url_block > input {
+        width: 89%;
+        margin: 10px auto 10px auto;
+        height: 40px;
+        background-color: transparent;
+        border: none;
+    
+        font-family: 'M_Ying_Hei';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 17px;
+        color: rgba(255, 255, 255, .8);
+        border-bottom: 2px solid rgba(255, 255, 255, 0.18);
+        border-radius: 0;
+    }
+
+    .url_button {
+        font-size: 14px;
+        margin: 25px auto 10px auto;
+        width: 90%;
+        height: 45px;
+        background-color: rgb(0, 0, 0, 0.7);
+        border-radius: 10px;
+    }
+
 }
