--- a/src/components/Space/Menu/Menu.module.css
+++ b/src/components/Space/Menu/Menu.module.css
@@ -1,11 +1,8 @@
 .block {
     border-radius: 23px;
     background-color: #121212;
-    border-color: transparent;
-    border-style: solid;
     font-family: 'M_Ying_Hei';
-    min-width: 560px;
-    max-width: 560px;
+    width: 560px;
     min-height: 400px;
     height: fit-content;
     text-align: left;
@@ -16,14 +13,13 @@
     position: -webkit-sticky;
     top: 50px;
     cursor: default;
-    padding-bottom: 15px;
     margin: 0 auto;
 }
 
 .title {
     color: white;
     font-size: 28px;
-    margin: 42px 37px 42px;
+    margin: 42px 37px 55px;
     text-align: left;
     line-height: 1.4;
     cursor: default;
@@ -38,10 +34,15 @@
     color: #adacac;
 }
 
+.settings_title {
+    color: #8f8f8f;
+    margin-left: 40px;
+    margin-bottom: 10px;
+}
 .settings_item {
     display: flex;
-    /*width: 375px;*/
-    height: 36px;
+    width: 100%;
+    height: 40px;
 
     font-family: 'M_Ying_Hei';
     font-style: normal;
@@ -50,35 +51,52 @@
     line-height: 18px;
 
     color: #FFFFFF;
-    margin-left: 35px;
-    margin-top: 16px;
     text-align: left;
 }
 
-.settings_block {
 
+.check_text {
+    width: 370px;
+}
+
+.settings_block {
+    margin-top: 40px;
+    background: #1b1b1b;
+    width: 88%;
+    margin: 0 auto;
+    border-radius: 16px;
+    padding: 25px;
+    gap: 24px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .check_box {
-    width: 53px;
-    height: 27.38px;
-    background: rgba(5, 255, 0, 0.49);
+    width: 55px;
+    height: 28px;
+    margin-left: 50px;
     border-radius: 31px;
+    background: rgb(61, 174, 57);
+    background: rgb(53, 53, 53);
     margin-top: auto;
     margin-bottom: auto;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
+
 .check_box > div {
     width: 22.08px;
     height: 22.08px;
     background: #FFFFFF;
     border-radius: 31px;
     margin-left: 3px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.48);
 }
 
 .settings_item > span {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -96,10 +114,137 @@
 
     color: rgba(255, 255, 255, 0.5);
     margin-left: 35px;
-    margin-top: 20px;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 .we > p {
     color: rgba(255, 255, 255, 1);
+}
+
+.breaker {
+    width: 100%;
+    height: 10px;
+    background-color: #0e0e0e;
+}
+
+.exit_block {
+    height: 50px;
+    cursor: pointer;
+    border-bottom-left-radius: 23px;
+    border-bottom-right-radius: 23px;
+    transition: all 0.15s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.autors_block {
+    margin-top: 40px;
+    background: #1b1b1b;
+    /* background: linear-gradient(321.4deg, #50449A -106.81%, #000000 74.64%); */
+    /* background: linear-gradient(274.98deg, #423691 5.76%, #B664F5 96.43%); */
+    /* box-shadow: 0px 15px 20px rgba(41, 24, 69, 0.69); */
+    width: 88%;
+    height: fit-content;
+    margin: 0 auto;
+    border-radius: 16px;
+    padding: 25px;
+    gap: 24px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.autor_name {
+    font-size: 16px;
+    color: white;
+}
+
+.autor_solutions {
+    color: gray;
+    font-size: 14px;
+}
+
+.additional_info {
+    color: #4b4b4b;
+    width: 87%;
+    margin: 20px auto 40px auto;
+    font-size: 14px;
+}
+
+
+@media (pointer: fine) {
+.exit_block:hover {   
+    background-color: rgba(194, 35, 35, 0.1);
+}
+}
+
+.exit_block:active {   
+    background-color: rgba(194, 35, 35, 0.2);
+}
+
+.exit_text {
+    color:rgba(215, 84, 84, 0.7)
+}
+
+@media (max-width: 600px) {
+    .block {
+        width: 92%;
+        margin: 0 auto;
+    }
+    .title {
+        margin: 33px 35px 60px;
+        font-size: 24px;
+    }
+    .settings_title{
+        margin-left: 36px;
+    }
+    .settings_item > span {
+        width: 80%;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .settings_block {
+        gap: 28px;
+    }
+
+    .check_text {
+        width: 85%;
+    }
+
+    .check_box {
+        width: 55px;
+        height: 30px;
+        margin-left: 15px;
+
+    }
+    .check_box > div {
+        width: 23px;
+        height: 23px;
+    }
+    .settings_item {
+        font-size: 14px;
+    }
+
+    .we {
+        width: 87%;
+        margin: 30px auto;
+    }
+
+    .autor_name {
+        font-size: 15px;
+    }
+    
+    .autor_solutions {
+        font-size: 12px;
+    }
+    
+    .additional_info {
+        width: 80%;
+        font-size: 12px;
+    }
 }
 
 
