--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body, html {
     background-color: #000;
 }
 
+
 .mySpinner {
 
     position: absolute;
@@ -31,6 +32,7 @@ body, html {
 }
 
 *::-webkit-scrollbar {
+    /* display: none; */
     overflow: overlay;
     height: 12px;
     width: 8px;
