--- a/src/components/Space/Space.css
+++ b/src/components/Space/Space.css
@@ -8,6 +8,7 @@
     vertical-align: center;
     margin-bottom: 70px;
     z-index: 1;
+    /* filter: invert(1); */
     /* animation: flick 0.5s ease-in-out; */
 }
 
