--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html {
     margin-left: calc(100vw - 100%);
     margin-right: 0;
     overflow-x: hidden;
+    /* filter: invert(1); */
     /*display: table-cell;*/
 }
 
