--- a/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
+++ b/src/components/Space/Schedule/ScheduleController/ScheduleController.module.css
@@ -1,6 +1,12 @@
 .controller {
     display: flex;
     flex-direction: row;
+    cursor: pointer;
+
+    /*position: relative;*/
+    /*width: 100%;*/
+    /*top: 0;*/
+    /*left: 0;*/
 }
 
 .block {
